src/dialog/Confirm.less
@__confirm-prefix-cls: kuma-confirm;
.@{__dialog-prefix-cls}-confirm {
    .@{__dialog-prefix-cls}-body {
        padding: 0;
        .@{__confirm-prefix-cls}-body {
            padding: 20px;
            white-space: nowrap;
            > .kuma-icon {
                display: inline-block;
                vertical-align: middle;
                font-size: 24px;
                &.kuma-icon-caution {
                    color: @brand-warning;
                }
                &.kuma-icon-information {
                    color: @brand-info;
                }
                &.kuma-icon-success {
                    color: @brand-success;
                }
                &.kuma-icon-error {
                    color: @brand-danger;
                }
            }
        }
        .@{__confirm-prefix-cls}-title {
            margin-left: 12px;
            display: inline-block;
            vertical-align: middle;
            font-size: 14px;
            color: @text-primary-color;
            max-width: 220px;
            white-space: pre-wrap;
        }
        .@{__confirm-prefix-cls}-content {
            margin-left: 36px;
            font-size: 12px;
            color: @text-secondary-color;
        }
        .@{__confirm-prefix-cls}-action {
            padding: 12px 0;
            background-color: @basic-300;
            text-align: center;
            button + button {
                margin-left: 8px;
                margin-bottom: 0;
            }
        }
    }
}

